--- a/SAMPLE-supervisord.auto-natpmp.conf
+++ b/SAMPLE-supervisord.auto-natpmp.conf
@@ -1,8 +1,12 @@
 [program:auto-natpmp]
-command=/usr/bin/python3 /opt/auto-natpmp/auto-natpmp.py --gateway-ip 10.2.0.1 --log-level INFO
+command=/usr/bin/python3 /opt/auto-natpmp/auto-natpmp.py 
+    --gateway-ip 10.2.0.1
+    --log-level INFO
+    --log-file /var/log/auto-natpmp/auto-natpmp.log
 autostart=true
 autorestart=true
 startretries=3
+user=auto-natpmp
+# A bit superfluous, but helps capture any output that escapes normal logging
 stderr_logfile=/var/log/auto-natpmp/auto-natpmp.log
 stdout_logfile=/var/log/auto-natpmp/auto-natpmp.log
-user=auto-natpmp
