add README and LICENSE

--- a/SAMPLE-supervisord.auto-natpmp.conf
+++ b/SAMPLE-supervisord.auto-natpmp.conf
@@ -1,12 +1,30 @@
+[program:auto-natpmp-init]
+# Ensures that the directory for the port file is created and correctly permissioned
+# Necessary because /var/run is a tmpfs that is emptied with every reboot in Debian
+command=bash -c "mkdir -p /var/run/auto-natpmp &&
+    chown -R auto-natpmp:nogroup /var/run/auto-natpmp &&
+    chmod 755 /var/run/auto-natpmp"
+user=root
+autostart=true
+autorestart=false
+startsecs=0
+priority=1
+exitcodes=0
+startretries=0
+
 [program:auto-natpmp]
-command=/usr/bin/python3 /opt/auto-natpmp/auto-natpmp.py 
+# Runs the actual auto-natpmp script; set appropriate command-line options below
+command=/usr/bin/python3 /opt/auto-natpmp/auto-natpmp.py
     --gateway-ip 10.2.0.1
     --log-level INFO
     --log-file /var/log/auto-natpmp/auto-natpmp.log
+    --port-file /var/run/auto-natpmp/port
+user=auto-natpmp
 autostart=true
 autorestart=true
 startretries=3
-user=auto-natpmp
-# A bit superfluous, but helps capture any output that escapes normal logging
+startsecs=5
+priority=100
+# Ensures that output outside of the normal logging mechanism is still captured
 stderr_logfile=/var/log/auto-natpmp/auto-natpmp.log
 stdout_logfile=/var/log/auto-natpmp/auto-natpmp.log
